初始化内容管理接口模块

--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,6 @@
 	<modules>
 		<module>aiyou-content-pojo</module>
 		<module>aiyou-content-dao</module>
+		<module>aiyou-content-interface</module>
 	</modules>
 </project>
