初始化哎呦商城内容管理服务层模块

--- a/pom.xml
+++ b/pom.xml
@@ -33,5 +33,6 @@
 		<module>aiyou-content-pojo</module>
 		<module>aiyou-content-dao</module>
 		<module>aiyou-content-interface</module>
+		<module>aiyou-content-service</module>
 	</modules>
 </project>
