配置zk服务器连接地址/新增redis服务器地址

--- a/aiyou-content-service/src/main/resources/resource/redis.properties
+++ b/aiyou-content-service/src/main/resources/resource/redis.properties
@@ -1,5 +1,7 @@
 ## 单机版Redis
-redis.single.host=192.168.182.128
+#redis.single.host=192.168.182.128
+#redis.single.port=6379
+redis.single.host=192.168.159.129
 redis.single.port=6379
 
 ## 集群版Redis
