--- a/aiyou-content-service/src/main/resources/resource/redis.properties
+++ b/aiyou-content-service/src/main/resources/resource/redis.properties
@@ -1,21 +1,35 @@
-## 单机版Redis
+#001-Service
 #redis.single.host=192.168.182.128
 #redis.single.port=6379
-redis.single.host=192.168.159.129
+#002-Service
+redis.single.host=192.168.194.131
 redis.single.port=6379
 
-## 集群版Redis
-redis.cluster.host.01=192.168.182.128
+#001-Service
+#redis.cluster.host.01=192.168.182.128
+#redis.cluster.port.01=8001
+#redis.cluster.host.02=192.168.182.128
+#redis.cluster.port.02=8002
+#redis.cluster.host.03=192.168.182.128
+#redis.cluster.port.03=8003
+#redis.cluster.host.04=192.168.182.128
+#redis.cluster.port.04=8004
+#redis.cluster.host.05=192.168.182.128
+#redis.cluster.port.05=8005
+#redis.cluster.host.06=192.168.182.128
+#redis.cluster.port.06=8006
+#001-Service
+redis.cluster.host.01=192.168.194.131
 redis.cluster.port.01=8001
-redis.cluster.host.02=192.168.182.128
+redis.cluster.host.02=192.168.194.131
 redis.cluster.port.02=8002
-redis.cluster.host.03=192.168.182.128
+redis.cluster.host.03=192.168.194.131
 redis.cluster.port.03=8003
-redis.cluster.host.04=192.168.182.128
+redis.cluster.host.04=192.168.194.131
 redis.cluster.port.04=8004
-redis.cluster.host.05=192.168.182.128
+redis.cluster.host.05=192.168.194.131
 redis.cluster.port.05=8005
-redis.cluster.host.06=192.168.182.128
+redis.cluster.host.06=192.168.194.131
 redis.cluster.port.06=8006
 
 
