--- a/aiyou-content-service/src/main/resources/resource/zookeeper.properties
+++ b/aiyou-content-service/src/main/resources/resource/zookeeper.properties
@@ -1,2 +1,4 @@
-# zookeeper åœ°å€
-single.zookeeper.baseUrl=192.168.159.129:2181
+#001-Service€
+#single.zookeeper.baseUrl=192.168.159.129:2181
+#002-Service€
+single.zookeeper.baseUrl=192.168.194.131:2181
