--- a/aiyou-content-service/src/main/resources/resource/zookeeper.properties
+++ b/aiyou-content-service/src/main/resources/resource/zookeeper.properties
@@ -1,4 +1,4 @@
-#001-Service€
-#single.zookeeper.baseUrl=192.168.159.129:2181
-#002-Service€
-single.zookeeper.baseUrl=192.168.194.131:2181
+#001-Serviceï¿½ï¿½
+single.zookeeper.baseUrl=192.168.159.128:2181
+#002-Serviceï¿½ï¿½
+#single.zookeeper.baseUrl=192.168.194.131:2181
